# vera_gsplat

./: .gitmodules  CMakeLists.txt  README.md
assets/: README.md
assets/shaders/: splat.frag  splat.vert
assets/wasm/: index.html  style.css  wasm-loader.js
docs/: CMakeCache.txt  Makefile  cmake_install.cmake  vera_app.html  vera_app.js  vera_app.wasm  wasm-loader.js
docs/wasm/: index.html  main.js  style.css
src/: main.cpp
